@startuml
'https://plantuml.com/class-diagram

abstract class Game {
    + EnemyIncHp : double
    + EnemyIncSpeed : double
    + MobEnemyProbability : double
    + EliteEnemyProbability : double
    + ElitePlusEnemyProbability : double
    + BossProbability : double;
    + bossMaxNumber : int;
    + bossExistScore : int;
    + bossHp : int;
    + {abstract} generateBoss(): void
    + {abstract} increaseDifficulty(): void
}

class NormalGame {
    + EnemyIncHp : double
    + EnemyIncSpeed : double
    + MobEnemyProbability : double
    + EliteEnemyProbability : double
    + ElitePlusEnemyProbability : double
    + BossProbability : double;
    + bossMaxNumber : int;
    + bossExistScore : int;
    + bossHp : int;
    + generateBoss(): void
    + increaseDifficulty(): void
}

class EasyGame {
    + EnemyIncHp : double
    + EnemyIncSpeed : double
    + MobEnemyProbability : double
    + EliteEnemyProbability : double
    + ElitePlusEnemyProbability : double
    + BossProbability : double;
    + bossMaxNumber : int;
    + bossExistScore : int;
    + bossHp : int;
    + generateBoss(): void
    + increaseDifficulty(): void
}

class HardGame {
    + EnemyIncHp : double
    + EnemyIncSpeed : double
    + MobEnemyProbability : double
    + EliteEnemyProbability : double
    + ElitePlusEnemyProbability : double
    + BossProbability : double;
    + bossMaxNumber : int;
    + bossExistScore : int;
    + bossHp : int;
    + generateBoss(): void
    + increaseDifficulty(): void
}

Game <|.. EasyGame
Game <|.. NormalGame
Game <|.. HardGame

@enduml